--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
         <div class="details">
           <header>
             <h3>Senior Interactive Developer</h3>
-            <span class="place">Killer Infographics</span>
+            <span class="place">Killer Visual Strategies [formerly Killer Infographics]</span>
             <span class="location">Seattle, WA</span>
           </header>
           <div>
@@ -37,45 +37,16 @@
               <li>Concepted, ideated, and presented recommended solutions with project manager, content writer/editor, and visual designer[s]</li>
               <li>Assisted project managers with projects outsourced to freelance developers</li>
             </ul>
-            <div class="concise">
-              <h4>
-                Frameworks & UI Paradigms
-              </h4>
+            <div>
               <ul>
-                <li>Vue</li>
-                <li>Handlebars</li>
-                <li>React</li>
-                <li>Thoughtbot Bourbon & Neat</li>
-                <li>Bootstrap</li>
-                <li>Tailwind</li>
+                <li><strong>App:</strong>  Vue, React, Handlebars</li>
+                <li><strong>Style:</strong>  SCSS/Sass, Bootstrap, Tailwind</li>
+                <li><strong>Chart:</strong>  Chart.js, D3.js</li>
+                <li><strong>Move:</strong>  Greensock/GSAP, ScrollMagic, Lottie/BodyMovin, Velocity.js, anime.js</li>
+                <li><strong>Data:</strong>  .csv, .json, Google Sheets, Firebase Realtime Database</li>
+                <li><strong>Build:</strong>  Webpack, Gulp, Vue CLI, create-react-app</li>
+                <li><strong>Host:</strong>  Netlify, Firebase, surge.sh, WP Engine</li>
               </ul>
-              <div class="concise">
-                <h4>
-                  Charting & Animation
-                </h4>
-                <ul>
-                  <li>Chart.js / vue-chartjs</li>
-                  <li>D3.js / C3.js</li>
-                  <li>GreensockJS/GSAP</li>
-                  <li>ScrollMagic</li>
-                  <li>Lottie / BodyMovin</li>
-                  <li>Velocity.js</li>
-                  <li>anime.js</li>
-                  <li>Data from .csv, .json, Google Sheets</li>
-                  <li>Firebase Realtime Database</li>
-                </ul>
-              </div>
-              <div class="concise">
-                <h4>
-                  Build & Deploy
-                </h4>
-                <ul>
-                  <li>Webpack</li>
-                  <li>Gulp</li>
-                  <li>Firebase</li>
-                  <li>Netlify</li>
-                </ul>
-              </div>
             </div>
           </div>
 
@@ -108,88 +79,7 @@
         </div>
       </section>
     </section>
-    <!-- <hr> -->
-    <!-- <section class="main-block"> -->
-      <!-- <h2>
-        <i class="fa fa-cogs"></i> Selected Technologies
-      </h2> -->
-      <!-- <section class="blocks">
-        <div class="date">
-          <span>2020</span><span>2016</span>
-        </div>
-        <div class="decorator">
-        </div>
-        <div class="details">
-          <header>
-            <h3>Killer Infographics</h3>
-            <span class="place">Front-end development</span>
-          </header>
-          <div>
-            <div class="concise">
-              <h4>
-                Frameworks & UI Paradigms
-              </h4>
-              <ul>
-                <li>Vue</li>
-                <li>Handlebars</li>
-                <li>React</li>
-                <li>Thoughtbot Bourbon & Neat</li>
-                <li>Bootstrap</li>
-                <li>Tailwind</li>
-              </ul>
-              <div class="concise">
-                <h4>
-                  Charting & Animation
-                </h4>
-                <ul>
-                  <li>Chart.js / vue-chartjs</li>
-                  <li>D3.js / C3.js</li>
-                  <li>GreensockJS/GSAP</li>
-                  <li>ScrollMagic</li>
-                  <li>Lottie / BodyMovin</li>
-                  <li>Velocity.js</li>
-                  <li>anime.js</li>
-                  <li>Data from .csv, .json, Google Sheets</li>
-                  <li>Firebase Realtime Database</li>
-                </ul>
-              </div>
-              <div class="concise">
-                <h4>
-                  Build & Deploy
-                </h4>
-                <ul>
-                  <li>Gulp</li>
-                  <li>Webpack</li>
-                  <li>Firebase</li>
-                  <li>Netlify</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-      <!-- <section class="blocks">
-        <div class="date">
-          <span>2012</span><span>2016</span>
-        </div>
-        <div class="decorator">
-        </div>
-        <div class="details">
-          <header>
-            <h3>ProKarma/Mantis</h3>
-            <span class="place">Project management, quality assurance, customer support</span>
-          </header>
-          <div>
-            <ul>
-              <li>MySQL, MS SQL, SAP Business Objects, .NET Framework, AWS EC2</li>
-              <li>UI/UX design with Balsamiq, Sketch, some HTML/CSS</li>
-              <li>Facebook, Twitter, Instagram, YouTube APIs</li>
-            </ul>
-          </div>
-        </div>
-      </section> -->
-    <!-- </section> -->
-    <!-- <hr> -->
+    <hr>
     <section class="main-block concise">
       <h2>
         <i class="fa fa-graduation-cap"></i> Education
@@ -214,7 +104,7 @@
             </ul>
         </div>
       </section>
-      <section class="blocks">
+      <!-- <section class="blocks">
         <div class="date">
         </div>
         <div class="decorator">
@@ -232,7 +122,7 @@
             </ul>
           </div>
         </div>
-      </section>
+      </section> -->
     </section>
   </section>
   <aside id="sidebar">
